# midix

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustc-ice-2024-12-27T20_24_51-49311.txt
bevy_midix/: Cargo.toml  README.md
bevy_midix/examples/: 2dpiano.rs  discover_voices.rs  egui.rs  input.rs  iterate_voices.rs  output.rs  piano._rs  piano.rs  pitchbend.rs  play_file.rs  programmatic_complex_song.rs  programmatic_simple_song.rs  programmatic_song.rs  scale.rs
bevy_midix/examples/input/: key_input.rs  keyboard_input.rs  main.rs  midi_stuff.rs  ui.rs
bevy_midix/examples/input_2dpiano/: main.rs
bevy_midix/examples/input_2dpiano/ui/: menu.rs  mod.rs  piano.rs
bevy_midix/examples/piano/: main.rs  ui.rs
bevy_midix/examples/programmatic_song/: main.rs  song.rs
bevy_midix/old_examples/: input.rs  output.rs
bevy_midix/src/: asset.rs  input.rs  lib.rs  output.rs  plugin.rs  settings.rs  synth.rs
bevy_midix/src/asset/: midi_file.rs  mod.rs  sound_font.rs
bevy_midix/src/input/: connection.rs  data.rs  error.rs  input_resource.rs  midir_stuff.rs  mod.rs  plugin.rs  ports.rs  reply.rs  settings.rs  task.rs
bevy_midix/src/input/connection/: mod.rs
bevy_midix/src/new_input/: connection.rs  error.rs  midir_stuff.rs  mod.rs  settings.rs
bevy_midix/src/old_input/: connection.rs  data.rs  error.rs  plugin.rs  reply.rs  task.rs
bevy_midix/src/output/: connection.rs  mod.rs  plugin.rs
bevy_midix/src/song/: bad_idea.rs  beat.rs  channel_settings.rs  mod.rs  simple_song.rs  sink.rs  song_writer.rs
bevy_midix/src/song/builder/: channel.rs  mod.rs
bevy_midix/src/song/simple/: mod.rs  section.rs
bevy_midix/src/synth/: mod.rs  plugin.rs  receiver.rs  sink.rs
bevy_midix/src/synth/sink/: commands.rs  inner.rs  mod.rs  task.rs
midix/: CHANGELOG.md  Cargo.toml  README.md  SUPPORT.md  TODO.md
midix/benchmark/: Cargo.toml
midix/benchmark/src/: main.rs
midix/collectinfo/: Cargo.toml
midix/collectinfo/src/: main.rs
midix/src/: arena.rs  byte.rs  bytes.rs  channel.rs  common_message.rs  controller.rs  debug.rs  error.rs  event.rs  io.rs  key.rs  lib.rs  live.rs  pitch_bend.rs  primitive.rs  program.rs  realtime_message.rs  riff.rs  smf.rs  song_position_pointer.rs  stream.rs  sysex.rs  system_common.rs  system_realtime.rs  target.rs  test.rs  utils.rs  velocity.rs
midix/src/byte/: message.rs  mod.rs
midix/src/channel_voice/: event.rs  mod.rs
midix/src/chunk/: header.rs  mod.rs  track.rs
midix/src/error/: mod.rs
midix/src/event/: live.rs  mod.rs  system.rs
midix/src/events/: file.rs  live.rs  mod.rs
midix/src/events/file/: chunk.rs  mod.rs
midix/src/file/: builder.rs  chunk.rs  format.rs  header.rs  mod.rs  track.rs
midix/src/file/chunk/: header.rs  mod.rs  track.rs  unknown_chunk.rs
midix/src/file/header/: mod.rs  timing.rs
midix/src/file/meta/: key_signature.rs  message.rs  mod.rs  ref_type.rs  tempo.rs  text.rs  time_signature.rs
midix/src/file/track/: event.rs  message.rs  mod.rs
midix/src/file_repr/: format.rs  mod.rs  smpte.rs
midix/src/file_repr/chunk/: header.rs  mod.rs  track.rs  unknown_chunk.rs
midix/src/file_repr/meta/: key_signature.rs  mod.rs  smpte_offset.rs  tempo.rs  text.rs  time_signature.rs
midix/src/file_repr/track/: event.rs  message.rs  mod.rs
midix/src/interfaces/: mod.rs
midix/src/key/: mod.rs
midix/src/message/: common_message.rs  controller.rs  key.rs  live.rs  mod.rs  mtcquarterframe.rs  pitch_bend.rs  program.rs  realtime_message.rs  sysex.rs  time.rs  track.rs  velocity.rs  voice_message.rs
midix/src/message/channel/: mod.rs  mode.rs  voice.rs  voice_event.rs
midix/src/message/channel_voice/: event.rs  mod.rs
midix/src/message/system/: common.rs  exclusive.rs  mod.rs  realtime.rs
midix/src/parser/: event.rs  format.rs  header_chunk.rs  mod.rs  track_chunk.rs  track_message.rs
midix/src/parser/old_reader/: error.rs  mod.rs
midix/src/parser/reader/: error.rs  event.rs  header.rs  mod.rs  state.rs  track_chunk.rs  track_event.rs  track_message.rs
midix/src/parser/types/: chunk.rs  event.rs  mod.rs  track_chunk.rs  track_event.rs
midix/src/reader/: error.rs  mod.rs  source.rs  state.rs
midix/src/synth/: mod.rs
midix/src/types/: channel.rs  common_message.rs  controller.rs  key.rs  mod.rs  pitch_bend.rs  program.rs  realtime_message.rs  sysex.rs  velocity.rs
midix/src/types/channel_voice/: mod.rs
midix/src/types/events/: file.rs  live.rs  mod.rs
midix/tests/: read_all.rs
midix/tests/simple_midi/: main.rs  parsed.rs
midix_examples/: Cargo.toml
midix_examples/src/: main.rs  piano.rs  scratch.rs  synth.rs  synth_asset_problem.rs
midix_synth/: Cargo.toml  README.md
midix_synth/examples/: sanbox.rs  sandbox.rs
midix_synth/src/: error.rs  lib.rs  math.rs  sample_header.rs  utils.rs
midix_synth/src/envelope/: mod.rs  modulation.rs  volume.rs
midix_synth/src/generator/: mod.rs
midix_synth/src/instrument/: mod.rs  region.rs
midix_synth/src/midifile/: error.rs  mod.rs
midix_synth/src/preset/: mod.rs  region.rs
midix_synth/src/prev_midifile/: error.rs  mod.rs  sequencer.rs
midix_synth/src/reader/: binary.rs  counter.rs  mod.rs
midix_synth/src/region/: ex.rs  lfo.rs  pair.rs
midix_synth/src/soundfont/: error.rs  info.rs  math.rs  mod.rs  parameters.rs  sampledata.rs  version.rs
midix_synth/src/synthesizer/: array_math.rs  channel.rs  chorus.rs  error.rs  mod.rs  reverb.rs  settings.rs
midix_synth/src/voice/: collection.rs  mod.rs  oscillator.rs
midix_synth/src/zone/: info.rs  mod.rs
midix_synth_old/: Cargo.toml
midix_synth_old/src/: lib.rs
midix_synth_old/src/prev_midifile/: sequencer.rs
midix_synth_old/src/synthesizer/: mod.rs  reverb.rs
midix_wasm_example/: Cargo.toml  README.md  index.html
midix_wasm_example/src/: main.rs  omain.rs
midix_wasm_example/src/ui/: menu.rs  mod.rs  piano.rs
src/synthesizer/: Cargo.toml  README.md  TODO.md  mod.rs
src/synthesizer/reader/: binary.rs
src/synthesizer/soundfont/: error.rs  mod.rs  sampledata.rs
src/synthesizer/src/: utils.rs
src/synthesizer/synthesizer/: channel.rs  chorus.rs  mod.rs
(+207 files in other folders)
