[package]
name = "midix"
version = "4.0.0-alpha"
authors = ["dsgallups <dsgallups@protonmail.com>"]
edition = "2024"
description = "MIDI structures designed for humans"
repository = "https://github.com/dsgallups/midix"
documentation = "https://docs.rs/midix"
readme = "README.md"
keywords = ["midi", "audio", "parser", "bevy"]
categories = ["multimedia::audio", "multimedia::encoding", "multimedia"]
license = "MIT OR Apache-2.0"
exclude = ["assets/*"]


[features]
default = ["std"]
all = ["std", "bevy_resources", "web"]
std = ["thiserror/std", "num_enum/std", "crossbeam-channel/std"]
web = ["bevy_platform/web"]
bevy_resources = [
    "dep:bevy",
    "dep:midir",
    "dep:tinyaudio",
    "dep:itertools",
    "dep:rustysynth",
    "dep:crossbeam-channel",
]
debug = ["bevy_resources"]
example = [
    "bevy_resources",
    "std",
    "bevy/bevy_color",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_ui",
    "bevy/bevy_ui_picking_backend",
    "bevy/bevy_winit",
    "bevy/bevy_window",
    "bevy/x11",
    # note that the wasm example freezes since when this feature is not enabled! TODO
    "bevy/multi_threaded",
]


[dependencies.bevy]
features = ["async_executor", "bevy_log", "bevy_state", "bevy_asset", "std"]
version = "0.16"
optional = true
default-features = false

[dependencies]
num_enum = { version = "0.7.3", default-features = false }
thiserror = { version = "2.0", default-features = false }
# Bevy feature deps
crossbeam-channel = { version = "0.5.15", optional = true, default-features = false }
midir = { version = "0.10", optional = true }
tinyaudio = { version = "1.1.0", optional = true }
itertools = { version = "0.14.0", optional = true }
rustysynth = { version = "1.3.5", optional = true }
bevy_platform = { version = "0.16", default-features = false, features = [
    "alloc",
] }

[dev-dependencies]
pretty_assertions = { default-features = false, features = [
    "alloc",
], version = "1.4" }

# [dev-dependencies.bevy]
# version = "0.16"
# default-features = true

[[example]]
name = "2dpiano"
required-features = ["example"]

[[example]]
name = "input"
path = "examples/input/main.rs"
required-features = ["example"]

[[example]]
name = "input_2dpiano"
path = "examples/input_2dpiano/main.rs"
required-features = ["example"]

[[example]]
name = "iterate_voices"
required-features = ["example"]

[[example]]
name = "pitchbend"
required-features = ["example"]

[[example]]
name = "play_file"
required-features = ["example"]

[[example]]
name = "programmatic_complex_song"
required-features = ["example"]

[[example]]
name = "programmatic_simple_song"
required-features = ["example"]

[[example]]
name = "scale"
required-features = ["example"]
