[package]
name = "bevy_midix"
version = "3.2.0"
authors = ["dsgallups <dsgallups@protonmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dsgallups/midix"
documentation = "https://docs.rs/bevy_midix"
description = "The MIDI plugin for humans. Out-of-the-box soundfont synthesizer, issuance of commands, and .mid file reading!"
keywords = ["gamedev", "bevy", "midi", "encoding", "control"]
categories = ["game-development", "game-engines", "encoding"]
exclude = ["assets/*"]

[features]
web = []

[dependencies]
midir = "0.10"
crossbeam-channel = "0.5.15"
midix = { version = "3.1.1", features = ["bevy"], path = "../midix" }
midix_synth = { version = "0.0.3", path = "../midix_synth" }
thiserror = "2.0"
tinyaudio = "1.1.0"
itertools = "0.14.0"

[dependencies.bevy]
version = "0.16.0-rc.5"
default-features = false
features = [
    "multi_threaded",
    "bevy_asset",
    "std",
    "async_executor",
    "bevy_log",
    "bevy_state",
]

[dev-dependencies.bevy]
version = "0.16.0-rc.5"
default-features = true
