[package]
name = "midix"
version = "3.0.0-rc2"
edition = "2024"
authors = ["dsgallups <dsgallups@protonmail.com>"]
description = "Human-readable MIDI decoder and encoder for real-time MIDI events"
repository = "https://github.com/dsgallups/midix"
documentation = "https://docs.rs/midix"
readme = "README.md"
keywords = ["midi", "audio", "parser"]
categories = ["multimedia::audio", "multimedia::encoding", "multimedia"]
license = "MIT OR Apache-2.0"


[features]
bevy = ["dep:bevy"]
debug = ["bevy"]

[dependencies]
bevy = { version = "0.16.0-rc.4", optional = true, default-features = false, features = [
    "std",
    "async_executor",
] }
num_enum = "0.7.3"
thiserror = "2.0.9"

[dev-dependencies]
pretty_assertions = { default-features = false, features = [
    "alloc",
], version = "1.4" }
