[package]
name = "midix"
version = "4.0.0-alpha"
edition = "2024"
authors = ["dsgallups <dsgallups@protonmail.com>"]
description = "MIDI structures designed for humans"
repository = "https://github.com/dsgallups/midix"
documentation = "https://docs.rs/midix"
readme = "README.md"
keywords = ["midi", "audio", "parser"]
categories = ["multimedia::audio", "multimedia::encoding", "multimedia"]
license = "MIT OR Apache-2.0"


[features]
std = ["bevy/std", "thiserror/std", "num_enum/std"]
nightly = []
bevy = ["dep:bevy"]
debug = ["bevy"]

[dependencies]
bevy = { version = "0.16.0-rc.5", optional = true, default-features = false }
num_enum = { version = "0.7.3", default-features = false }
thiserror = { version = "2.0", default-features = false }

[dev-dependencies]
pretty_assertions = { default-features = false, features = [
    "alloc",
], version = "1.4" }
