[package]
name = "midix"
version = "3.1.2"
edition = "2024"
authors = ["dsgallups <dsgallups@protonmail.com>"]
description = "MIDI structures designed for humans"
repository = "https://github.com/dsgallups/midix"
documentation = "https://docs.rs/midix"
readme = "README.md"
keywords = ["midi", "audio", "parser"]
categories = ["multimedia::audio", "multimedia::encoding", "multimedia"]
license = "MIT OR Apache-2.0"


[features]
bevy = ["dep:bevy"]
debug = ["bevy"]

[dependencies]
bevy = { version = "0.16.0", optional = true, default-features = false, features = [
    "std",
    "async_executor",
] }
num_enum = "0.7.3"
thiserror = "2.0"

[dev-dependencies]
pretty_assertions = { default-features = false, features = [
    "alloc",
], version = "1.4" }
