[package]
name = "midix_examples"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = "0.15.0"
bevy_egui = "0.31.1"
bevy_midix = { version = "2.0.0", path = "../bevy_midix" }
strum = "0.26.3"


# Idiomatic Bevy code often triggers these lints, and the CI workflow treats them as errors.
# In some cases they may still signal poor code quality however, so consider commenting out these lines.
[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments -- which triggers this lint.
too_many_arguments = "allow"
# Queries that access many components may trigger this lint.
type_complexity = "allow"


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
