[package]
name = "midix_wasm_example"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.0-rc.5", features = ["web"] }
bevy_midix = { path = "../bevy_midix", features = ["web"] }
itertools = "0.14.0"

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
