[package]
name = "midix_synth"
version = "0.1.0-alpha"
edition = "2024"
authors = ["dsgallups <dsgallups@protonmail.com>"]
description = "SoundFont compatible MIDI synthesizer for midix"
repository = "https://github.com/dsgallups/midix"
documentation = "https://docs.rs/midix_synth"
readme = "README.md"
keywords = ["midi", "audio", "synthesizer"]
categories = ["multimedia::audio", "multimedia"]
license = "MIT OR Apache-2.0"

[dependencies]
tracing = "0.1.41"
